--- a/src/components/_core/button.sass
+++ b/src/components/_core/button.sass
@@ -17,7 +17,7 @@
 			position: absolute
 			height: 3px
 			width: 100%
-			background: $main
+			background: $white
 			border-radius: 9px
 			opacity: 1
 			left: 0
@@ -53,8 +53,8 @@
 					top: 18px
 					width: 0%
 					left: 50%
-		@media screen and ( min-width: 991.98px )
-			display: none
-		@media(max-width: 576px)
-			+ span
-				display: none
+		// @media screen and ( min-width: 991.98px )
+		// 	display: none
+		// @media(max-width: 576px)
+		// 	+ span
+		// 		display: none
