--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,4 +5,7 @@ block var
 	- var bodyClass = 'homepage'
 
 block main
-	include ../components/banner/homebanner.pug
+	.full-page
+		include ../components/banner/homebanner.pug
+		include ../components/home/h-1/h-1.pug
+		include ../components/home/h-2/h-2.pug
