--- a/src/components/_global/header/header.pug
+++ b/src/components/_global/header/header.pug
@@ -5,21 +5,22 @@ header
 			.navbar-menu.d-flex.align-center.justify-between
 				a.navbar-brand(href="")
 					img(src="./img/logo.png" alt="")
-				ul
-					li.nav-item.active
-						a.nav-link.f-18.fw-700.line-30.color-text.text-uppercase(href='#home') Trang Chủ
-					li.nav-item
-						a.nav-link.f-18.fw-700.line-30.color-text.text-uppercase(href='#about') Giới Thiệu
-					li.nav-item
-						a.nav-link.f-18.fw-700.line-30.color-text.text-uppercase(href='#services') Dịch Vụ
-					li.nav-item
-						a.nav-link.f-18.fw-700.line-30.color-text.text-uppercase(href='#project') Dự Án
-					li.nav-item
-						a.nav-link.f-18.fw-700.line-30.color-text.text-uppercase(href='#project') Blog
-					li.nav-item
-						a.nav-link.f-18.fw-700.line-30.color-text.text-uppercase(href='#contact') Liên Hệ
 			.btn.btn-toggle
 				span
 				span
 				span
 				span
+#overlay
+	ul
+		li.nav-item.active
+			a.nav-link.f-36.fw-700.color-text.text-uppercase(href='#home') Trang Chủ
+		li.nav-item
+			a.nav-link.f-36.fw-700.color-text.text-uppercase(href='#about') Giới Thiệu
+		li.nav-item
+			a.nav-link.f-36.fw-700.color-text.text-uppercase(href='#services') Dịch Vụ
+		li.nav-item
+			a.nav-link.f-36.fw-700.color-text.text-uppercase(href='#project') Dự Án
+		li.nav-item
+			a.nav-link.f-36.fw-700.color-text.text-uppercase(href='#project') Blog
+		li.nav-item
+			a.nav-link.f-36.fw-700.color-text.text-uppercase(href='#contact') Liên Hệ
