--- a/src/components/_global/header/header.sass
+++ b/src/components/_global/header/header.sass
@@ -4,8 +4,6 @@ header
 	top: 0
 	left: 0
 	z-index: 999
-	background-color: $white
-	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1)
 	.navbar
 		width: 100%
 		position: relative
@@ -13,49 +11,97 @@ header
 		.navbar-menu
 			width: 100%
 			.navbar-brand
-				width: 50px
-			ul
-				width: auto
-				display: flex
-				align-items: center
-				.nav-item
-					margin-right: 30px
-					&.active
-						.nav-link
-							color: $main-2
-			@media screen and ( max-width: 991.98px )
-				ul
+				width: 80px
+			@media screen and ( max-width: 575.98px )
+				.navbar-brand
+					width: 60px
+#overlay
+	opacity: 0
+	visibility: hidden
+	pointer-events: none
+	background-color: rgba(0, 0, 0, .8)
+	width: 100%
+	height: 100%
+	position: fixed
+	top: 0
+	left: 0
+	z-index: 150
+	transition: .3s all ease-in-out
+	ul
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100vh
+		display: flex
+		align-items: center
+		justify-content: center
+		flex-direction: column
+		opacity: 0
+		visibility: hidden
+		overflow: hidden
+
+		.nav-item
+			margin-bottom: 15px
+			transform: translateX(-200%)
+			opacity: 0
+			transition: all .5s cubic-bezier(.22, .44, 0, 1)
+			.nav-link
+				position: relative
+				color: $white
+				padding: 15px 0
+				transition: all .5s cubic-bezier(.22, .44, 0, 1)
+				&::after
 					position: absolute
-					top: -100%
-					left: 0
-					opacity: 0
-					visibility: hidden
-					width: 100%
-					flex-direction: column
+					right: -50px
+					top: 50%
+					width: 0
+					height: 1px
 					background-color: $white
-					box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1)
-					.nav-item
-						line-height: 50px
-						transform: translateY(-200%)
-						opacity: 1
-						transition: .5s all cubic-bezier(0.22, 0.44, 0, 1)
-					&.active
-						top: 100%
-						transition: all .5s cubic-bezier(.22, .44, 0, 1)
-						opacity: 1
-						visibility: visible
-						overflow: hidden
-						.nav-item
-							opacity: 1
-							transform: translateY(0)
-							&:nth-child(1)
-								transition-delay: .1s
-							&:nth-child(2)
-								transition-delay: .2s
-							&:nth-child(3)
-								transition-delay: .3s
-							&:nth-child(4)
-								transition-delay: .4s
-							&:nth-child(5)
-								transition-delay: .5s
-							
+					content: ''
+					transition: all .5s cubic-bezier(.22, .44, 0, 1)
+					transform: translateY(-50%)
+				&::before
+					position: absolute
+					left: -50px
+					top: 50%
+					width: 0
+					height: 1px
+					background-color: transparent
+					content: ''
+					transition: all .5s cubic-bezier(.22, .44, 0, 1)
+					transform: translateY(-50%)
+				&:hover
+					color: $main
+					&::after,
+					&::before
+						width: 40px
+						background-color: $main
+
+				&.active
+					.nav-link
+						color: $main
+	&.active
+		opacity: 1
+		visibility: visible
+		pointer-events: visible
+		ul
+			transition: all .5s cubic-bezier(.22, .44, 0, 1)
+			opacity: 1
+			visibility: visible
+			overflow: visible
+			.nav-item
+				opacity: 1
+				transform: translateY(0)
+				&:nth-child(1)
+					transition-delay: .1s
+				&:nth-child(2)
+					transition-delay: .2s
+				&:nth-child(3)
+					transition-delay: .3s
+				&:nth-child(4)
+					transition-delay: .4s
+				&:nth-child(5)
+					transition-delay: .5s
+				&:nth-child(6)
+					transition-delay: .6s
