--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -2,10 +2,15 @@
 	position: relative
 	.home-banner
 		width: 100%
+		height: 100%
 		.slide-inner
 			position: relative
-			+img-ratio(853/1920)
+			width: 100%
+			height: 100%
 			img
+				width: 100%
+				height: 100%
+				object-fit: cover
 				transform: scale(1)
 				transition: all 5s cubic-bezier(.22, .44, 0, 1)
 			.content
@@ -15,7 +20,8 @@
 				top: 0
 				left: 0
 				z-index: 2
-				background-color: $opacity
+				display: none
+				background-color: rgba($color: $black, $alpha: .5)
 				.title
 					position: absolute
 					top: 50%
@@ -37,3 +43,7 @@
 						.title
 							transform: translate3d(-50%, 0, 0)
 							opacity: 1
+		@media screen and ( max-width: 375.98px )
+			height: 50vh
+			.slide-inner
+				height: 50vh
