--- a/src/components/banner/homebanner.pug
+++ b/src/components/banner/homebanner.pug
@@ -1,24 +1,28 @@
-section#section-banner
-	.home-banner
-		.swiper-container
-			.swiper-wrapper
-				.swiper-slide
-					a(href="").slide-inner
-						img(src="./img/banner/b-3.jpg" alt="")
-						.content
-							.title.fw700.text-uppercase tôi là ai
-				.swiper-slide
-					a(href="").slide-inner
-						img(src="./img/banner/b-2.jpg" alt="")
-						.content
-							.title.fw700.text-uppercase tôi là ai
-				.swiper-slide
-					a(href="").slide-inner
-						img(src="./img/banner/b-1.jpg" alt="")
-						.content
-							.title.fw700.text-uppercase tôi là ai
-				.swiper-slide
-					a(href="").slide-inner
-						img(src="./img/banner/b-4.jpg" alt="")
-						.content
-							.title.fw700.text-uppercase tôi là ai
+section#section-banner.section(setBackground='./img/banner/b-2.jpg')
+	//- .home-banner
+	//- 	.swiper-container
+	//- 		.swiper-wrapper
+	//- 			.swiper-slide
+	//- 				.slide-inner
+	//- 					a(href="")
+	//- 						img(src="./img/banner/b-3.jpg" alt="")
+	//- 					.content
+	//- 						.title.fw700.text-uppercase tôi là ai
+	//- 			.swiper-slide
+	//- 				.slide-inner
+	//- 					a(href="")
+	//- 						img(src="./img/banner/b-2.jpg" alt="")
+	//- 					.content
+	//- 						.title.fw700.text-uppercase tôi là ai
+	//- 			.swiper-slide
+	//- 				.slide-inner
+	//- 					a(href="")
+	//- 						img(src="./img/banner/b-1.jpg" alt="")
+	//- 					.content
+	//- 						.title.fw700.text-uppercase tôi là ai
+	//- 			.swiper-slide
+	//- 				.slide-inner
+	//- 					a(href="")
+	//- 						img(src="./img/banner/b-4.jpg" alt="")
+	//- 					.content
+	//- 						.title.fw700.text-uppercase tôi là ai
