--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -1,11 +1,10 @@
 #section-banner
-	position: relative
 	.home-banner
 		width: 100%
 		height: 100%
 		.slide-inner
 			position: relative
-			width: 100%
+			width: 100vw
 			height: 100%
 			img
 				width: 100%
@@ -20,7 +19,6 @@
 				top: 0
 				left: 0
 				z-index: 2
-				display: none
 				background-color: rgba($color: $black, $alpha: .5)
 				.title
 					position: absolute
