--- a/src/components/banner/homebanner.pug
+++ b/src/components/banner/homebanner.pug
@@ -1,28 +1,24 @@
-section#section-banner.section(setBackground='./img/banner/b-2.jpg')
-	//- .home-banner
-	//- 	.swiper-container
-	//- 		.swiper-wrapper
-	//- 			.swiper-slide
-	//- 				.slide-inner
-	//- 					a(href="")
-	//- 						img(src="./img/banner/b-3.jpg" alt="")
-	//- 					.content
-	//- 						.title.fw700.text-uppercase tôi là ai
-	//- 			.swiper-slide
-	//- 				.slide-inner
-	//- 					a(href="")
-	//- 						img(src="./img/banner/b-2.jpg" alt="")
-	//- 					.content
-	//- 						.title.fw700.text-uppercase tôi là ai
-	//- 			.swiper-slide
-	//- 				.slide-inner
-	//- 					a(href="")
-	//- 						img(src="./img/banner/b-1.jpg" alt="")
-	//- 					.content
-	//- 						.title.fw700.text-uppercase tôi là ai
-	//- 			.swiper-slide
-	//- 				.slide-inner
-	//- 					a(href="")
-	//- 						img(src="./img/banner/b-4.jpg" alt="")
-	//- 					.content
-	//- 						.title.fw700.text-uppercase tôi là ai
+section#section-banner(data-title="Trang chủ")
+	.home-banner
+		.swiper-container
+			.swiper-wrapper
+				.swiper-slide
+					.slide-inner
+						img(src="./img/banner/b-3.jpg" alt="")
+						.content
+							.title.fw700.text-uppercase Dịch vụ
+				.swiper-slide
+					.slide-inner
+						img(src="./img/banner/b-2.jpg" alt="")
+						.content
+							.title.fw700.text-uppercase Blog
+				.swiper-slide
+					.slide-inner
+						img(src="./img/banner/b-1.jpg" alt="")
+						.content
+							.title.fw700.text-uppercase Dự án
+				.swiper-slide
+					.slide-inner
+						img(src="./img/banner/b-4.jpg" alt="")
+						.content
+							.title.fw700.text-uppercase Liên hệ
