--- a/src/components/home/h-1/h-1.pug
+++ b/src/components/home/h-1/h-1.pug
@@ -1,3 +1,3 @@
-section#about.section(setBackground='./img/banner/b-3.jpg')
+section#about.section(setBackground='./img/banner/b-3.jpg' data-title="giới thiệu")
 	.container
 		h1 
