--- a/src/components/home/h-2/h-2.pug
+++ b/src/components/home/h-2/h-2.pug
@@ -1,3 +1,3 @@
-section#about.section(setBackground='./img/banner/b-1.jpg')
+section#about.section(setBackground='./img/banner/b-1.jpg' data-title="dịch vụ")
 	.container
 		h1 ABOUT
