--- a/src/components/_core/_color.sass
+++ b/src/components/_core/_color.sass
@@ -1,12 +1,16 @@
-$main: #3287B5
-$main-2: #334d93
+$main: #ff0000
+$main-2: #d00000
 $body: #ffffff
-$gray: #707070
+$gray: #999999
+$gray-2: #666666
+$background: #f5f5f5
 $white: #ffffff
 $pink: #fcb4b4
 $bg_color: #f5f5f5
-$red: #e11e25
-$title: #393939
-$black: #000000
+$red: #ff0000
+$red-2: #d00000
+$text: #333333
+$black: #111111
+$border: #e1e1e1
 $opacity: rgba($color: $main, $alpha: .6)
 $gradient: linear-gradient( 145deg, rgba($color: $main, $alpha: .95) 0%, rgba($color: $main-2, $alpha: .95) 100%)
