--- a/src/components/_core/title.sass
+++ b/src/components/_core/title.sass
@@ -1,8 +1,13 @@
-.main-title
+.section-title
 	position: relative
 	font-size: 36/16*1rem
-	font-weight: 800
-	line-height: 1.698
+	font-weight: 700
+	letter-spacing: 2px
 	padding-bottom: 30px
-	text-transform: uppercase
-
+	color: #111111
+	@media screen and ( max-width: 1199.98px )
+		font-size: 30/16*1rem
+	@media screen and ( max-width: 1024.98px )
+		font-size: 26/16*1rem
+	@media screen and ( max-width: 991.98px )
+		font-size: 20/16*1rem
