--- a/src/components/banner/homebanner.pug
+++ b/src/components/banner/homebanner.pug
@@ -1,24 +1,5 @@
-section#section-banner(data-title="Trang chủ")
+section#section-banner
 	.home-banner
-		.swiper-container
-			.swiper-wrapper
-				.swiper-slide
-					.slide-inner
-						img(src="./img/banner/b-3.jpg" alt="")
-						.content
-							.title.fw700.text-uppercase Dịch vụ
-				.swiper-slide
-					.slide-inner
-						img(src="./img/banner/b-2.jpg" alt="")
-						.content
-							.title.fw700.text-uppercase Blog
-				.swiper-slide
-					.slide-inner
-						img(src="./img/banner/b-1.jpg" alt="")
-						.content
-							.title.fw700.text-uppercase Dự án
-				.swiper-slide
-					.slide-inner
-						img(src="./img/banner/b-4.jpg" alt="")
-						.content
-							.title.fw700.text-uppercase Liên hệ
+		img(src="./img/banner/b-2.jpg" alt="")
+	.content
+		.title.fw700.text-uppercase Blog
