--- a/src/components/_core/_reset.sass
+++ b/src/components/_core/_reset.sass
@@ -1,6 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
+::-webkit-scrollbar-track
+	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+	background-color: #cccccc
+	border-radius: 20px
+::-webkit-scrollbar
+	width: 4px
+	height: 4px
+::-webkit-scrollbar-thumb
+	border-radius: 20px
+	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+	background-color: $main
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
 
 html
+	font-family: 'Fira Sans', sans-serif
 	line-height: 1.5
 	-webkit-text-size-adjust: 100%
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
@@ -8,17 +20,15 @@ html
 
 body
 	font-weight: 400
-	line-height: 1.5
-	background-color: $body
+	background-color: $white
 	overflow-x: hidden
-	color: $gray
+	color: $text
 	margin: 0
 	margin: 0
 body, html
-	font-family: 'Montserrat', sans-serif
-	font-size: 14/16*1rem
-	@media(min-width: 1280px)
-		font-size: 16/16*1rem
+	font-size: 1rem
+	@media screen and ( max-width: 575.98px )
+		font-size: 14/16*1rem
 
 *
 	box-sizing: border-box
@@ -99,7 +109,6 @@ a
 	font-size: inherit
 	font-weight: inherit
 	color: inherit
-
 
 a:not([href]):not([tabindex])
 	text-decoration: none
