--- a/src/components/_core/animation.sass
+++ b/src/components/_core/animation.sass
@@ -16,9 +16,10 @@
 		position: relative
 		overflow: hidden
 		cursor: pointer
-		img
-			transition: all 1s cubic-bezier(.22, .44, 0, 1)
-			transform: scale(1)
+		a
+			img
+				transition: all 1s cubic-bezier(.22, .44, 0, 1)
+				transform: scale(1)
 		&::before
 			position: absolute
 			top: 0
@@ -32,11 +33,13 @@
 			background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%)
 			-webkit-transform: skewX(-25deg)
 			transform: skewX(-25deg)
-	&:hover
-		.item-img, .img
-			box-shadow: 0 0 11px rgba(33,33,33,.2)
-			img
-				transform: scale(1.05)
-			&::before
-				-webkit-animation: shine .75s
-				animation: shine .75s
+	@media screen and ( min-width: 1025px )
+		&:hover
+			.item-img, .img
+				box-shadow: 0 0 20px rgba(33,33,33,.2)
+				a
+					img
+						transform: scale(1.03)
+				&::before
+					-webkit-animation: shine .75s
+					animation: shine .75s
