--- a/src/components/_core/atomic.sass
+++ b/src/components/_core/atomic.sass
@@ -6,6 +6,7 @@
 	margin-right: auto
 .d-flex
 	display: flex
+	align-items: center
 .flex-column
 	flex-direction: column
 .flex-row
@@ -70,7 +71,7 @@
 .color-white
 	color: $white
 .color-gray
-	color: #767676
+	color: #999999
 .color-text
 	color: #333333
 .color-main
@@ -123,6 +124,8 @@
 	padding-right: 0
 .m-0
 	margin: 0
+.text-left
+	text-align: left
 .transition
 	transition: all 1s cubic-bezier(.22, .44, 0, 1)
 .nav-link
