--- a/src/components/_global/header/header.sass
+++ b/src/components/_global/header/header.sass
@@ -3,105 +3,62 @@ header
 	width: 100%
 	top: 0
 	left: 0
-	z-index: 999
-	.navbar
+	z-index: 1000
+	background: $white
+	.nav-top
 		width: 100%
-		position: relative
-		padding: 7/16*1rem 0
-		.navbar-menu
-			width: 100%
-			.navbar-brand
-				width: 80px
-			@media screen and ( max-width: 575.98px )
-				.navbar-brand
-					width: 60px
-#overlay
-	opacity: 0
-	visibility: hidden
-	pointer-events: none
-	background-color: rgba(0, 0, 0, .8)
-	width: 100%
-	height: 100%
-	position: fixed
-	top: 0
-	left: 0
-	z-index: 150
-	transition: .3s all ease-in-out
-	ul
-		position: absolute
-		top: 0
-		left: 0
-		width: 100%
-		height: 100vh
-		display: flex
-		align-items: center
-		justify-content: center
-		flex-direction: column
-		opacity: 0
-		visibility: hidden
-		overflow: hidden
-
-		.nav-item
-			margin-bottom: 15px
-			transform: translateX(-200%)
-			opacity: 0
-			transition: all .5s cubic-bezier(.22, .44, 0, 1)
-			.nav-link
-				position: relative
-				color: $white
-				padding: 15px 0
-				transition: all .5s cubic-bezier(.22, .44, 0, 1)
-				&::after
-					position: absolute
-					right: -50px
-					top: 50%
-					width: 0
-					height: 1px
-					background-color: $white
-					content: ''
-					transition: all .5s cubic-bezier(.22, .44, 0, 1)
-					transform: translateY(-50%)
-				&::before
-					position: absolute
-					left: -50px
-					top: 50%
-					width: 0
-					height: 1px
-					background-color: transparent
-					content: ''
-					transition: all .5s cubic-bezier(.22, .44, 0, 1)
-					transform: translateY(-50%)
-				&:hover
-					color: $main
-					&::after,
-					&::before
-						width: 40px
-						background-color: $main
-
-				&.active
-					.nav-link
-						color: $main
-	&.active
-		opacity: 1
-		visibility: visible
-		pointer-events: visible
-		ul
-			transition: all .5s cubic-bezier(.22, .44, 0, 1)
-			opacity: 1
-			visibility: visible
-			overflow: visible
-			.nav-item
-				opacity: 1
-				transform: translateY(0)
-				&:nth-child(1)
-					transition-delay: .1s
+		padding: 3px 0
+		background: $main
+		.socail
+			li
+				width: 20px
+				height: 20px
+				border-radius: 50%
+				display: flex
+				align-items: center
+				justify-content: center
+				a
+					width: 100%
+					height: 100%
+					font-size: 14/16*1rem
+					color: $white
+					display: flex
+					align-items: center
+					justify-content: center
+				+ li
+					margin-left: 10px
+				&:first-child
+					background: #2D88FF
 				&:nth-child(2)
-					transition-delay: .2s
+					background: #F70000
 				&:nth-child(3)
-					transition-delay: .3s
+					background: #00AFE7
 				&:nth-child(4)
-					transition-delay: .4s
-				&:nth-child(5)
-					transition-delay: .5s
-				&:nth-child(6)
-					transition-delay: .6s
+					background: #009FF6
+		.wrapper-right
+			.contact-wrapper
+				a
+					color: $white
+					font-size: 14/16*1rem
+					display: flex
+					align-items: center
+					em
+						padding-right: 10px
+					+ a
+						margin-left: 20px
+		.account-wrapper
+			margin-left: 30px
+			.account-icon
+				display: flex
+				align-items: center
+				font-size: r(14px)
+				color: $white
+			.wrap
+				padding-left: 10px
+				li
+					a
+						color: $white
+						font-size: r(14px)
+	nav
+		width: 100%
+		.nav-wrapper
