--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -2,45 +2,40 @@
 	.home-banner
 		width: 100%
 		height: 100%
-		.slide-inner
-			position: relative
-			width: 100vw
+		img
+			width: 100%
 			height: 100%
+			object-fit: cover
+			transform: scale(1.05)
+			transition: all 5s cubic-bezier(.22, .44, 0, 1)
+	.content
+		position: absolute
+		width: 100%
+		height: 100%
+		top: 0
+		left: 0
+		z-index: 2
+		background-color: rgba($color: $black, $alpha: .5)
+		.title
+			position: absolute
+			top: 50%
+			left: 50%
+			width: auto
+			font-size: 70px
+			font-weight: 700
+			color: #ffffff
+			transition: all 3s cubic-bezier(0.215, 0.61, 0.355, 1) 1.1s
+			transform: translate3d(-20%, 0, 0)
+			opacity: 0
+			display: inline-block
+	&.active
+		.home-banner
 			img
-				width: 100%
-				height: 100%
-				object-fit: cover
 				transform: scale(1)
-				transition: all 5s cubic-bezier(.22, .44, 0, 1)
-			.content
-				position: absolute
-				width: 100%
-				height: 100%
-				top: 0
-				left: 0
-				z-index: 2
-				background-color: rgba($color: $black, $alpha: .5)
-				.title
-					position: absolute
-					top: 50%
-					left: 50%
-					width: auto
-					font-size: 70px
-					font-weight: 700
-					color: #ffffff
-					transition: all 3s cubic-bezier(0.215, 0.61, 0.355, 1) 1.1s
-					transform: translate3d(-20%, 0, 0)
-					opacity: 0
-					display: inline-block
-		.swiper-slide
-			&-active
-				.slide-inner
-					img
-						transform: scale(1.1)
-					.content
-						.title
-							transform: translate3d(-50%, 0, 0)
-							opacity: 1
+		.content
+			.title
+				transform: translate3d(-50%, 0, 0)
+				opacity: 1
 		@media screen and ( max-width: 375.98px )
 			height: 50vh
 			.slide-inner
