--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,10 +5,9 @@ block var
 	- var bodyClass = 'homepage'
 
 block main
-	.full-page
-		include ../components/banner/homebanner.pug
-		include ../components/home/h-1/h-1.pug
-		include ../components/home/h-2/h-2.pug
-		include ../components/home/h-3/h-3.pug
-		include ../components/home/h-4/h-4.pug
-		include ../components/home/h-5/h-5.pug
+	//- include ../components/banner/homebanner.pug
+	//- include ../components/home/h-1/h-1.pug
+	//- include ../components/home/h-2/h-2.pug
+	//- include ../components/home/h-3/h-3.pug
+	//- include ../components/home/h-4/h-4.pug
+	//- include ../components/home/h-5/h-5.pug
